src/pages/search-room/search-room.scss
@import "../../common/variables.scss";

.search-room-page {
  margin: 0;
  background: #f4f4f6;
  min-width: 320px;
  display: flex;
  flex-direction: column;
  min-height: 100%;

  &__header {
    z-index: 2;
  }

  &__sidebar-wrapper {
    display: flex;
    @media screen and (max-width: 701px) {
      justify-content: center;
      margin-bottom: 20px;
    }
  }

  &__main {
    display: flex;
    column-gap: 60px;
    background-color: #ffffff;
    padding: 30px 126px 72px 140px;
    min-height: 930px;
    flex: 1 0 auto;

    @media screen and (max-width: 1144px) {
      padding: 30px 30px;
    }

    @media screen and (max-width: 700px) {
      flex-direction: column;
    }
  }

  &__rooms {
    display: flex;
    flex-direction: column;
    row-gap: 20px;
    flex-grow: 1;
  }

  &__rooms-wrapper {
    display: grid;
    grid-template-columns: repeat(auto-fill, 270px);
    grid-template-rows: repeat(auto-fill, 1fr);
    grid-gap: 23.5px 12px;

    @media screen and (max-width: 700px) {
      justify-content: center;
    }
  }

  &__rooms-title {
    display: flex;
    @media screen and (max-width: 700px) {
      justify-content: center;
    }
  }

  &__rooms-navigation {
    display: flex;
    justify-content: center;
    padding: 24px 27px 0 0;

    @media screen and (max-width: 1200px) {
      padding: 19px 0 0;
    }
  }

  &__date-filter {
    margin-bottom: 20px;
  }

  &__availability {
    margin-bottom: 28px;
  }

  &__slider {
    margin-bottom: 29px;
  }

  &__guests {
    margin-bottom: 27px;
  }

  &__additional-features {
    margin-bottom: 30px;
  }

  &__features-title {
    margin-bottom: 17px;
  }

  &__room-amenities {
    margin-bottom: 29px;
  }

  &__footer {
    border-top: 1px solid $color-main-lighter;
    flex: 0 0 auto;
  }
}

